helm/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosip-service-ingress
  namespace: mosip
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway


spec:
  rules:
  - http:
      paths:
      - path: /booking-service
        pathType: Prefix
        backend:
          service:
            name: mosip-booking-svc
            port:
              number: 8080
